[gd_scene load_steps=11 format=2]

[ext_resource path="res://core/characters/enemies/fighter/Fighter.gd" type="Script" id=1]
[ext_resource path="res://core/characters/enemies/fighter/fighter_movement_resource.tres" type="Resource" id=2]
[ext_resource path="res://core/characters/enemies/fighter/fighter_core_data.tres" type="Resource" id=3]
[ext_resource path="res://assets/enemies/enemyBlue1.png" type="Texture" id=4]
[ext_resource path="res://core/characters/modules/health/Health.tscn" type="PackedScene" id=5]
[ext_resource path="res://core/characters/modules/debug/Debug.tscn" type="PackedScene" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 1257.68

[sub_resource type="CircleShape2D" id=2]
radius = 604.397

[sub_resource type="CircleShape2D" id=3]
radius = 2224.54

[sub_resource type="CircleShape2D" id=4]
radius = 1253.42

[node name="Fighter" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 1 )
movement = ExtResource( 2 )
data = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
editor/display_folded = true
rotation = -1.5708
texture = ExtResource( 4 )

[node name="Muzzle" type="Position2D" parent="Sprite"]
position = Vector2( 0, 51.491 )
rotation = 1.5708

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
rotation = -1.5708
polygon = PoolVector2Array( -28.5486, -41.4879, -43.0443, -16.278, -24.7671, 36.6629, -15.9436, 36.0327, -13.4226, 8.30173, 18.0898, 10.1925, 11.7874, 30.9907, 21.8713, 36.6629, 43.2998, -17.5385, 26.2831, -41.4879, 11.1571, -32.6644, 10.5269, -25.1015, -6.48984, -24.4712, -9.64108, -32.6644 )

[node name="SeekArea" type="Area2D" parent="."]
editor/display_folded = true
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SeekArea"]
shape = SubResource( 1 )

[node name="PursuitArea" type="Area2D" parent="."]
editor/display_folded = true
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PursuitArea"]
shape = SubResource( 2 )

[node name="ArrivalArea" type="Area2D" parent="."]
editor/display_folded = true
collision_layer = 2
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArrivalArea"]
shape = SubResource( 3 )

[node name="EvadeArea" type="Area2D" parent="."]
editor/display_folded = true
collision_layer = 2
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="EvadeArea"]
shape = SubResource( 4 )

[node name="TimerRPM" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="TimerToArrive" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Health" parent="." instance=ExtResource( 5 )]

[node name="Debug" parent="." instance=ExtResource( 6 )]
[connection signal="body_entered" from="SeekArea" to="." method="_on_SeekArea_body_entered"]
[connection signal="body_exited" from="SeekArea" to="." method="_on_SeekArea_body_exited"]
[connection signal="body_entered" from="PursuitArea" to="." method="_on_PursuitArea_body_entered"]
[connection signal="body_exited" from="PursuitArea" to="." method="_on_PursuitArea_body_exited"]
[connection signal="body_entered" from="ArrivalArea" to="." method="_on_ArrivalArea_body_entered"]
[connection signal="body_exited" from="ArrivalArea" to="." method="_on_ArrivalArea_body_exited"]
[connection signal="body_entered" from="EvadeArea" to="." method="_on_EvadeArea_body_entered"]
[connection signal="body_exited" from="EvadeArea" to="." method="_on_EvadeArea_body_exited"]
[connection signal="timeout" from="TimerRPM" to="." method="_on_TimerRPM_timeout"]
[connection signal="timeout" from="TimerToArrive" to="." method="_on_TimerToArrive_timeout"]
[connection signal="health_depleated" from="Health" to="." method="_on_Health_health_depleated"]
